kubernetes/apps/manifests/cloudflare-ddns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-ddns
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cloudflare-ddns
  template:
    metadata:
      labels:
        name: cloudflare-ddns
    spec:
      containers:
        - image: favonia/cloudflare-ddns:1.15.0
          name: cloudflare-ddns
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          securityContext:
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true
      restartPolicy: Always
