kubernetes/apps/manifests/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: argocd-server
  namespace: argocd
spec:
  rules:
  - host: argo.aictur.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
  - hosts:
    - argo.aictur.dev
    secretName: argocd-secret
