kubernetes/apps/manifests/jellyfin.yaml
# Hardware acceleration
# https://www.johanneskueber.com/posts/hardware_acceleration_kubernets_jellyfin/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  jellyfin
  namespace: home
  labels:
    app:  jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  template:
    metadata:
      labels:
        app:  jellyfin
    spec:
      securityContext:
        fsGroup: 997 # ID del grupo `render`
      containers:
      - name:  jellyfin
        image:  jellyfin/jellyfin:10.10.3
        securityContext:
          privileged: true
        ports:
        - containerPort: 8096
          protocol: TCP
        volumeMounts:
        - mountPath: /data/media
          name: media
          readOnly: True
        - mountPath: /config
          name: config
        - mountPath: /dev/dri
          name: jellyfin-hardware-accel
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-data
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-hardware-accel
          hostPath:
            path: /dev/dri
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: home
spec:
  selector:
    app: jellyfin
  type: ClusterIP
  ports:
  - name: jellyfin
    protocol: TCP
    port: 8096
    targetPort: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: jellyfin
  namespace: home
spec:
  rules:
  - host: tv.aictur.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
  tls:
  - hosts:
    - tv.aictur.dev
    secretName: jellyfin-secret
