kubernetes/apps/manifests/speedtest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: misc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: misc
  labels:
    app: speedtest
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
      - name: speedtest
        image: ghcr.io/librespeed/speedtest@sha256:054d3973bcec28abb528178ecc5decf6e202eb3be1b0d574ccf375a376480d98
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
          capabilities:
            drop:
              - ALL
            add:
              - CHOWN
              - NET_BIND_SERVICE
          # runAsUser: 10001
          # runAsGroup: 10001
        resources:
          limits:
            cpu: 800m
            memory: 1G
          requests:
            cpu: 100m
            memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: misc
spec:
  selector:
    app: speedtest
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt
  name: speedtest
  namespace: misc
spec:
  rules:
  - host: speed.aictur.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: speedtest
            port:
              number: 8080
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - speed.aictur.dev
    secretName: speedtest-tls-ingress # < cert-manager will store the created certificate in this secret.
