kubernetes/apps/manifests/wireguard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wireguard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  namespace: wireguard
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wg-easy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wg-easy
    spec:
      containers:
        - name: wg-easy
          # Specify external hostname and port as environment variables
          image: ghcr.io/wg-easy/wg-easy:14
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 30000
              name: wg
              protocol: UDP
            - containerPort: 51821
              name: http
              protocol: TCP
          # Use the http server for pod health checks
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          # Give pod permissions to modify iptables and load the wireguard kernel module
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          # Persistent storage location
          volumeMounts:
            - mountPath: /etc/wireguard
              name: config
          resources:
            limits:
              cpu: 800m
              memory: 1G
            requests:
              cpu: 100m
              memory: 500Mi
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wg-easy-config
---
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-wg
  namespace: wireguard
spec:
  ports:
    - name: wg
      port: 30000
      nodePort: 30000
      protocol: UDP
      targetPort: wg
  selector:
    app.kubernetes.io/name: wg-easy
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-http
  namespace: wireguard
spec:
  ports:
    - name: http
      port: 51821
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: wg-easy
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: wg-easy
  namespace: wireguard
spec:
  rules:
  - host: vpn.aictur.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wg-easy-http
            port:
              name: http
  tls:
  - hosts:
    - vpn.aictur.dev
    secretName: wg-easy-tls-ingress
